# docs/openapi.yaml
@@ -9,6 +9,8 @@ info:
 servers:
 - url: http://localhost:8080
   description: Generated server url
+security:
+- bearerAuth: []
 paths:
   /api/transfers:
     post:
@@ -67,6 +69,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/JwtResponse"
+      security: []
   /api/admin/users:
     get:
       tags:
@@ -843,6 +846,8 @@ components:
     PageableObject:
       type: object
       properties:
+        unpaged:
+          type: boolean
         pageNumber:
           type: integer
           format: int32
@@ -851,8 +856,6 @@ components:
         pageSize:
           type: integer
           format: int32
-        unpaged:
-          type: boolean
         offset:
           type: integer
           format: int64
@@ -861,9 +864,9 @@ components:
     SortObject:
       type: object
       properties:
-        sorted:
-          type: boolean
         unsorted:
+          type: boolean
+        sorted:
           type: boolean
         empty:
           type: boolean
