# src/main/java/com/example/bankcards/controller/AuthenticationController.java
@@ -4,6 +4,7 @@ import com.example.bankcards.dto.auth.JwtResponse;
 import com.example.bankcards.dto.auth.LoginRequest;
 import com.example.bankcards.service.auth.AuthService;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.security.SecurityRequirements;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -18,7 +19,8 @@ public class AuthenticationController {
     private final AuthService authService;
 
     @PostMapping("/login")
-    @Operation(summary = "Аутентификация пользователя и выдача JWT", security = {})
+    @Operation(summary = "Аутентификация пользователя и выдача JWT")
+    @SecurityRequirements
     public JwtResponse login(@RequestBody @Valid LoginRequest request) {
         return authService.login(request);
     }
